--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div id="desktop">
         <!-- Sidebar Widget Area (macOS Sonoma Style) -->
         <div id="widget-sidebar"
-            class="fixed top-12 right-6 md:right-8 lg:right-12 z-10 flex flex-col md:flex-row items-start gap-6 animate-fade-in w-full md:w-auto">
+            class="fixed top-12 right-6 md:right-8 lg:right-12 z-10 hidden md:flex flex-col md:flex-row items-start gap-6 animate-fade-in md:w-auto">
 
             <!-- Profile Card Widget -->
             <div id="profile-widget"
@@ -223,14 +223,14 @@
         </div>
 
         <!-- Mobile Home Screen (iOS Style) -->
-        <div id="home-screen" class="fixed inset-0 z-5 pt-16 px-3 hidden md:hidden overflow-hidden flex flex-col">
+        <div id="home-screen" class="fixed inset-0 z-[15] pt-16 px-3 flex md:hidden overflow-y-auto flex-col pb-24">
             <!-- iOS Style Widgets Section -->
             <div class="grid grid-cols-2 gap-3 mb-6 mt-4">
 
                 <!-- Desktop-Style Profile Widget (Side-by-Side Mobile) -->
                 <div id="mobile-profile-widget"
                     class="flex flex-col items-center relative aspect-square bg-white/5 backdrop-blur-xl border border-white/10 rounded-[32px] p-4 shadow-2xl overflow-hidden">
-                    <div class="relative animate-float scale-[0.75] flex justify-center -mt-3">
+                    <div class="relative scale-[0.85] flex justify-center -mt-1">
                         <div class="w-32 h-32 rounded-full p-1 relative">
                             <div
                                 class="absolute inset-0 rounded-full border-[3px] border-purple-500 shadow-[0_0_20px_#a855f7] animate-pulse">
@@ -359,7 +359,7 @@
             </div>
 
             <!-- Edit Menu -->
-            <div class="menu-item relative group" id="menu-edit-btn">
+            <div class="menu-item relative group hidden sm:block" id="menu-edit-btn">
                 <span class="hover:text-white cursor-pointer py-1 px-2 rounded hover:bg-white/10 transition-colors"
                     data-lang-key="edit">Edit</span>
                 <div class="dropdown-menu absolute left-0 top-full mt-1 w-40 bg-black/95 backdrop-blur-xl rounded-lg border border-white/10 shadow-2xl py-2 z-50 hidden group-hover:block"
@@ -524,7 +524,7 @@
             </div>
 
             <!-- Help Menu -->
-            <div class="menu-item relative group" id="menu-help-btn">
+            <div class="menu-item relative group hidden sm:block" id="menu-help-btn">
                 <span class="hover:text-white cursor-pointer py-1 px-2 rounded hover:bg-white/10 transition-colors"
                     data-lang-key="help">Help</span>
                 <div class="dropdown-menu absolute left-0 top-full mt-1 w-48 bg-black/95 backdrop-blur-xl rounded-lg border border-white/10 shadow-2xl py-2 z-50 hidden group-hover:block"
@@ -541,9 +541,9 @@
         <div class="flex items-center gap-3">
             <!-- Close All Button -->
             <button onclick="window.os.handleMenuAction('close-all')"
-                class="flex items-center gap-2 bg-red-500/10 hover:bg-red-500/20 px-3 py-1 rounded-full border border-red-500/30 text-red-500 font-bold text-[9px] uppercase tracking-widest transition-all active:scale-95">
-                <span>✕</span>
-                <span data-lang-key="close_all">Close All</span>
+                class="flex items-center gap-1.5 bg-red-500/10 hover:bg-red-500/20 px-2 sm:px-3 py-1 rounded-full border border-red-500/30 text-red-500 font-bold text-[9px] uppercase tracking-widest transition-all active:scale-95">
+                <span class="text-xs">✕</span>
+                <span data-lang-key="close_all" class="hidden sm:inline">Close All</span>
             </button>
         </div>
     </div>
