--- a/index.html
+++ b/index.html
@@ -227,11 +227,10 @@
             <!-- iOS Style Widgets Section -->
             <div class="grid grid-cols-2 gap-3 mb-6 mt-4">
 
-                <!-- Desktop-Style Profile Widget (Side-by-Side Mobile) -->
                 <div id="mobile-profile-widget"
-                    class="flex flex-col items-center relative aspect-square bg-white/5 backdrop-blur-xl border border-white/10 rounded-[32px] p-4 shadow-2xl overflow-hidden">
-                    <div class="relative scale-[0.85] flex justify-center -mt-1">
-                        <div class="w-32 h-32 rounded-full p-1 relative">
+                    class="flex flex-col items-center relative bg-white/5 backdrop-blur-xl border border-white/10 rounded-[32px] p-4 shadow-2xl">
+                    <div class="relative scale-[0.8] flex justify-center -mt-2">
+                        <div class="w-24 h-24 rounded-full p-1 relative">
                             <div
                                 class="absolute inset-0 rounded-full border-[3px] border-purple-500 shadow-[0_0_20px_#a855f7] animate-pulse">
                             </div>
@@ -251,9 +250,8 @@
                         class="w-full py-2 bg-blue-600 text-white rounded-xl text-[9px] font-bold uppercase tracking-widest active:scale-95 transition-transform shadow-lg mt-auto">Resume</button>
                 </div>
 
-                <!-- Desktop-Style Analog Clock Widget (Side-by-Side Mobile) -->
                 <div id="mobile-clock-widget"
-                    class="flex flex-col items-center relative aspect-square bg-white/5 backdrop-blur-xl border border-white/10 rounded-[32px] p-4 shadow-2xl">
+                    class="flex flex-col items-center relative bg-white/5 backdrop-blur-xl border border-white/10 rounded-[32px] p-4 shadow-2xl">
 
                     <!-- Mobile Style Menu Overlay -->
                     <div id="mobile-style-menu"
