🔧 Restore Edit and Help menus to mobile top bar

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <div
         class="fixed top-0 w-full h-12 top-bar-bg backdrop-blur-md flex justify-between items-center px-4 z-[9999] text-xs font-medium text-theme-muted select-none">
         <!-- Top Bar Left (Menus) -->
-        <div class="flex items-center gap-4">
+        <div class="flex items-center gap-1 sm:gap-4">
             <div class="flex items-center gap-2 mr-2">
                 <div class="w-5 h-5 rounded-full overflow-hidden border border-white/20 shadow-sm">
                     <img src="profile.jpeg" alt="SF" class="w-full h-full object-cover"
@@ -357,7 +357,7 @@
             </div>
 
             <!-- Edit Menu -->
-            <div class="menu-item relative group hidden sm:block" id="menu-edit-btn">
+            <div class="menu-item relative group" id="menu-edit-btn">
                 <span class="hover:text-white cursor-pointer py-1 px-2 rounded hover:bg-white/10 transition-colors"
                     data-lang-key="edit">Edit</span>
                 <div class="dropdown-menu absolute left-0 top-full mt-1 w-40 bg-black/95 backdrop-blur-xl rounded-lg border border-white/10 shadow-2xl py-2 z-50 hidden group-hover:block"
@@ -522,7 +522,7 @@
             </div>
 
             <!-- Help Menu -->
-            <div class="menu-item relative group hidden sm:block" id="menu-help-btn">
+            <div class="menu-item relative group" id="menu-help-btn">
                 <span class="hover:text-white cursor-pointer py-1 px-2 rounded hover:bg-white/10 transition-colors"
                     data-lang-key="help">Help</span>
                 <div class="dropdown-menu absolute left-0 top-full mt-1 w-48 bg-black/95 backdrop-blur-xl rounded-lg border border-white/10 shadow-2xl py-2 z-50 hidden group-hover:block"
