Add KrishiOS live website link to project data and UI

--- a/index.html
+++ b/index.html
@@ -349,6 +349,10 @@
                         onclick="window.open('krishios.pdf', '_blank')">
                         <span>🌾</span> <span>KrishiOS Report</span>
                     </div>
+                    <div class="dropdown-item px-4 py-2 hover:bg-purple-500/20 hover:text-purple-400 cursor-pointer flex items-center gap-2"
+                        onclick="window.open('https://sohanfardin.github.io/krishios', '_blank')">
+                        <span>🌐</span> <span>KrishiOS Live Site</span>
+                    </div>
                     <div class="dropdown-item px-4 py-2 hover:bg-cyan-500/20 hover:text-cyan-400 cursor-pointer flex items-center gap-2"
                         onclick="window.open('neurodristi.pdf', '_blank')">
                         <span>👁️</span> <span>NeuroDristi Report</span>
